--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,10 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-  
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">
@@ -18,8 +15,9 @@
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  
+  <ion-button (click)="onAddMaze()">Add maze</ion-button>
   <ion-list>
-    <app-message *ngFor="let message of getMessages()" [message]="message"></app-message>
+
+
   </ion-list>
 </ion-content>
