feat  ( edit maze ) Initial update

--- a/src/app/edit-maze/edit-maze.page.html
+++ b/src/app/edit-maze/edit-maze.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-maze</ion-title>
+    <ion-title>Edit Maze</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+Put grid here!
 </ion-content>
