feat ( maze cell ) resize grid

--- a/src/app/edit-maze/edit-maze.page.html
+++ b/src/app/edit-maze/edit-maze.page.html
@@ -7,7 +7,10 @@
 <ion-content>
 <div *ngFor="let row of maze.grid; index as rowIndex" class="divRow">
   <div *ngFor="let col of maze.grid[rowIndex]; index as colIndex">
-    <app-maze-cell [maze]="maze"></app-maze-cell>
+    <app-maze-cell 
+      [row]="rowIndex" 
+      [column]="colIndex">
+    </app-maze-cell>
   </div>
 </div>
 
