--- a/src/app/edit-maze2/edit-maze2.page.html
+++ b/src/app/edit-maze2/edit-maze2.page.html
@@ -12,6 +12,10 @@
           </td>        
       </tr>    
   </table>
+  <ion-item>
+    <ion-label>Name</ion-label>
+    <ion-input [(ngModel)]="mazeName"></ion-input>
+  </ion-item>
 
   <div>
     <ion-button (click)="onViewInAr()">View in AR</ion-button>
