feat ( edit maze ) store data to indexdb

--- a/src/app/edit-maze2/edit-maze2.page.html
+++ b/src/app/edit-maze2/edit-maze2.page.html
@@ -23,4 +23,7 @@
   <div>
     <ion-button (click)="onClearMaze()">Clear Maze</ion-button>
   </div>
+  <div>
+    <ion-button (click)="onSaveMaze()">Save Maze</ion-button>
+  </div>  
 </ion-content>
