feat ( edit maze ) got load working

--- a/src/app/edit-maze2/edit-maze2.page.html
+++ b/src/app/edit-maze2/edit-maze2.page.html
@@ -26,4 +26,7 @@
   <div>
     <ion-button (click)="onSaveMaze()">Save Maze</ion-button>
   </div>  
+  <div>
+    <ion-button (click)="onClose()">Close</ion-button>
+  </div>  
 </ion-content>
