--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inbox
+      My Mazes
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -17,7 +17,7 @@
   </ion-header>
   <ion-button (click)="onAddMaze()">Add maze</ion-button>
   <ion-list>
-    <ng-template ngFor let-item [ngForOf]="mazeItems">
+    <ng-template ngFor let-item [ngForOf]="items$ | async">
       <ion-item (click)="onItemSelect(item)">
         <ion-label>{{ item.name }}</ion-label>
       </ion-item>
