feat ( xr view ) fix black bug

--- a/src/app/edit-maze2/edit-maze2.page.html
+++ b/src/app/edit-maze2/edit-maze2.page.html
@@ -23,7 +23,7 @@
 
 
   <div>
-    <ion-button (click)="onViewInAr()" expand="block">View in AR</ion-button>
+    <ion-button (click)="onViewInAr()" expand="block">AR View</ion-button>
   </div>
   <div>
     <ion-button (click)="onClearMaze()" expand="block">Clear Maze</ion-button>
