--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      My Mazes
-    </ion-title>
+    <ion-title>My Mazes</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,9 +8,7 @@
 
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">
-        My Mazes
-      </ion-title>
+      <ion-title size="large">My Mazes</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-button (click)="onAddMaze()">Add maze</ion-button>
@@ -23,4 +19,5 @@
       </ion-item>
     </ng-template>
   </ion-list>
+  
 </ion-content>
