--- a/src/app/view-maze/view-maze.page.html
+++ b/src/app/view-maze/view-maze.page.html
@@ -1,3 +1,4 @@
 <ion-content [fullscreen]="true">
-  <iframe src="assets/render-maze.html" style="position:absolute; width: 100%; height: 100%;"></iframe>
+  <iframe src="assets/render-maze.html" 
+          style="position:absolute; width: 100%; height: 100%;"></iframe>
 </ion-content>
