--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>My Mazes</ion-title>
+    <ion-title>AR Stuff Maker</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,16 +8,11 @@
 
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">My Mazes</ion-title>
+      <ion-title size="large">AR Stuff Maker</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button (click)="onAddMaze()">Add maze</ion-button>
-  <ion-list>
-    <ng-template ngFor let-item [ngForOf]="items$ | async">
-      <ion-item (click)="onItemSelect(item)">
-        <ion-label>{{ item.name }}</ion-label>
-      </ion-item>
-    </ng-template>
-  </ion-list>
+
+  <ion-button (click)="onMazes()" expand="block">Make Mazes</ion-button>
+  <ion-button (click)="onPix()" expand="block">Make Pix</ion-button>
   
 </ion-content>
