--- a/src/app/list-pix/list-pix.page.html
+++ b/src/app/list-pix/list-pix.page.html
@@ -12,6 +12,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-button (click)="onAdd()">Add Pix</ion-button>
+  <ion-button (click)="onHome()">Home</ion-button>
   <ion-list>
     <ng-template ngFor let-item [ngForOf]="items$ | async">
       <ion-item (click)="onItemSelect(item)">
